프로젝트 기본 틀 작성